#2 position of modal is now fixed. Only issue left is that the page behind is still scrollable

--- a/css/questions.css
+++ b/css/questions.css
@@ -4,12 +4,13 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
-  position: absolute;
+  position: fixed !important;
   top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 500;
+  overflow-y: hidden;
 }
 
 .question-modal {
